methods.picture.MethodsPicture.scala.error
Compilation error:
MethodsPicture:39: error: method run is defined twice
  conflicting symbols both originated in file 'plm.runtime19.MethodsPicture'
override def run() {
             ^