methods.picture.MethodsPicture.scala.code
override def run() {
  forward();forward();
  makeV(Color.YELLOW);
  forward();forward();
  left();
  forward();forward();
  makeV(Color.RED);
  forward();forward();
  left();
  forward();forward();
  makeV(Color.BLUE);
  forward();forward();
  left();
  forward();forward();
  makeV(Color.GREEN);
  forward();forward();
  left();
}
  
  


def makeV(c: Color) {
  setBrushColor(c)
  brushDown();
  brushUp();
  forward();
  left();
  forward();
  brushDown();
  brushUp();
  backward();
  right();
  forward();
  brushDown();
  brushUp();
}

override def run() {
  for (stepper <- 1 to 3){
    for (stivi<-1 to 3){
      for (steve<-1 to 4) {
        forward();forward();
        makeV(Color.YELLOW);
        forward();forward();
        left();
        forward();forward();
        makeV(Color.RED);
        forward();forward();
        left();
        forward();forward();
        makeV(Color.BLUE);
        forward();forward();
        left();
        forward();forward();
        makeV(Color.GREEN);
        forward();forward();
        left();
      }
    for (steva<-1 to 7) {
      forward();
    }
  }
    for (stevo<-1 to 21) {
      backward();
    }
    left();
    for (steve <- 1 to 7) {
      forward();
    }
    right();
    }
    
    }